--- a/eced.html
+++ b/eced.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Engineering Streams</title>
+<title>ECED-Thapar</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
@@ -65,185 +65,126 @@
 <div class="row no-gutters slider-text align-items-end">
 <div class="col-md-9 ftco-animate pb-5">
 <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p>
-<h1 class="mb-0 bread">Engineering Streams</h1>
+<h1 class="mb-0 bread">ECED</h1>
 </div>
 </div>
 </div>
 </section>
+
+
+
+
+
+
+
+  <!-- team-area -->
+        <section id="team" class="team-area team-area-content p-relative pt-120 pb-120 fix">
+            <div class="circal1 item-zoom-inout"></div>
+            <div class="circal2 item-zoom-inout"></div>
+            <div class="circal3 item-zoom-inout"></div>
+            <div class="circal4 item-zoom-inout"></div>
+            <div class="container">
+
+                <div class="row"  style="padding-top: 50px;">
+                    <div class="col-lg-5">
+                        <div class="wow fadeInLeft" data-animation="fadeInLeft" data-delay=".2s">
+                            <img src="images/eced.jpg" alt="CSED">
+                        </div>
+                    </div>
+                    <div class="col-lg-7"  style="padding-left: 50px;">
+                        <div class="s-about-content pl-30 wow fadeInRight" data-animation="fadeInRight" data-delay=".2s">
+                            <h2>Dr. Alpana Agarwal</h2>
+                            <span><i>Head of Department, Department of Electronics and Commmunication Engineering</i></span>
+                            <p>Welcome to the Department of Electronics and Commmunication Engineering. I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders. We at Electronics and Commmunication Engineering department offer one of the best Electronics Engineering undergraduate program aimed at the super-creative generation.</p>
+                            <p>We have carefully crafted our undergraduate program to offer elective focus in seven major areas of Electronics: RF Systems and MEMS, Wireless Communication, Optical Communication, Signal Processing, VLSI Devices, Circuit and System,Machine Learning and last but not least Artificial Intelligence. Apart from these, design projects through-out the program highlight life-long outcome based, research led teaching pedagogy. With these choices, we hope to fulfil the requirement of industry as well quench the thirst of budding professionals.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+      
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <section class="ftco-section ftco-no-pt ftco-no-pb">
 <div class="container">
 <div class="row d-flex no-gutters">
 <div class="col-md-5 d-flex">
-<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/about-1.jpg);">
+<!-- <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/about-1.jpg);">
 </div>
 </div>
-<!-- <div class="col-md-7 pl-md-5 py-md-5">
+<div class="col-md-7 pl-md-5 py-md-5">
 <div class="heading-section pt-md-5">
-<h2 class="mb-4">Why Choose Us?</h2>
+<h2 class="mb-4">Why Choose Us?</h2> -->
 </div>
-<div class="row">
+ 
+<div class="row" style="padding-top: 50px;">
 <div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-stethoscope"></span></div>
-<div class="text pl-3">
-<h4>Care Advices</h4>
-<p>Far far away, behind the word mountains, far from the countries.</p>
+<div class="icon d-flex align-items-center justify-content-center">
+	<span class="fal fa-users"></span>
+
 </div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-customer-service"></span></div>
 <div class="text pl-3">
-<h4>Customer Supports</h4>
-<p>Far far away, behind the word mountains, far from the countries.</p>
+<h4>Great Faculty</h4>
+<p>Improve your career prospects with our master's programme and study at our newly.</p>
 </div>
 </div>
 <div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-emergency-call"></span></div>
+<div class="icon d-flex align-items-center justify-content-center">
+	<span class="fal fa-building"></span>
+
+</div>
 <div class="text pl-3">
-<h4>Emergency Services</h4>
-<p>Far far away, behind the word mountains, far from the countries.</p>
+<h4>New Infrastructure</h4>
+<p>Improve your career prospects with our master's programme and study at our newly.</p>
 </div>
 </div>
 <div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-veterinarian"></span></div>
+<div class="icon d-flex align-items-center justify-content-center"><span class="icon color3"></span></div>
 <div class="text pl-3">
-<h4>Veterinary Help</h4>
-<p>Far far away, behind the word mountains, far from the countries.</p>
+<h4>More Learning</h4>
+<p>Improve your career prospects with our master's programme and study at our newly.</p>
+</div>
+</div>
+<div class="col-md-6 services-2 w-100 d-flex">
+<div class="icon d-flex align-items-center justify-content-center"><span class="fal fa-magic"></span></div>
+<div class="text pl-3">
+<h4>Enhanced Syllabi</h4>
+<p>Improve your career prospects with our master's programme and study at our newly.</p>
 </div>
 </div>
 </div>
 </div>
 </div>
- --></div>
+</div>
 </section>
-<section class="ftco-section bg-light">
-<div class="container">
-<div class="row mb-5 pb-5">
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-<div class="d-block services text-center">
-<div class="icon d-flex align-items-center justify-content-center">
-<img class="logosize" src="images/logo.png">
-</div>
-<div class="media-body p-4">
-<h3 class="heading">Computer Science & Engineering</h3>
-<p>The Department of Computer Science and Engineering offers 4-year B.E. programme in Computer Engineering, Computer Science & Engineering and Computer Science & Business Systems.</p>
-<a href="csed.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-<div class="d-block services text-center">
-<div class="icon d-flex align-items-center justify-content-center">
-<img class="logosize" src="images/logo.png">
-</div>
-<div class="media-body p-4">
-<h3 class="heading">Mechanical Engineering</h3>
-<p>The department offers four Bachelor’s courses: B.E. Mechanical Engineering, B.E. Mechanical Production Engineering, B.E. Mechatronics Engineering & Integrated B.E. Mechanical MBA.</p>
-<a href="med.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-<div class="d-block services text-center">
-<div class="icon d-flex align-items-center justify-content-center">
-<img class="logosize" src="images/logo.png">
-</div>
-<div class="media-body p-4">
-<h3 class="heading">Electrical & Instrumentation</h3>
-<p>The Department of Electrical and Instrumentation Engineering has been playing a vital role in producing scientists and technologists of highest calibre ever since it was established in the year 1956.
-</p>
-<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-</div>
-</div>
-</div>
-</div>
-
-<div class="row mt-5 pt-4">
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-<div class="d-block services text-center">
-<div class="icon d-flex align-items-center justify-content-center">
-<img class="logosize" src="images/logo.png">
-</div>
-<div class="media-body p-4">
-<h3 class="heading">Civil Engineering</h3>
-<p>The Civil Engineering Program at Thapar Institute of Engineering & Technology is designed to prepare its graduates for continued learning and successful careers in industry, government, academia and consulting.</p>
-<a href="civil.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-<div class="d-block services text-center">
-<div class="icon d-flex align-items-center justify-content-center">
-<img class="logosize" src="images/logo.png">
-</div>
-<div class="media-body p-4">
-<h3 class="heading">Electronics & Communication</h3>
-<p>Thapar’s Department of Electronics and communication Engineering was established in 1975 with the inception of the Institute to cater to undergraduate education in the field of Electronics and communication Engineering.</p>
-<a href="eced.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-<div class="d-block services text-center">
-<div class="icon d-flex align-items-center justify-content-center">
-<img class="logosize" src="images/logo.png">
-</div>
-<div class="media-body p-4">
-<h3 class="heading">Department of Biotechnology</h3>
-<p>An excellent reputation precedes the Department of Biotechnology,Thapar Institute. Upholding which the eminent faculty members initiate innovative research programmes while maintaining an intellectually thriving space for students.</p>
-<a href="biotech.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-</div>
-</div>
-</div>
-</div>
 
 
 
 
-<div class="row mt-5 pt-4">
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-<div class="d-block services text-center">
-<div class="icon d-flex align-items-center justify-content-center">
-<img class="logosize" src="images/logo.png">
-</div>
-<div class="media-body p-4">
-<h3 class="heading">Chemical Engineering</h3>
-<p>The Department of Chemical Engineering of Thapar Institute of Engineering and Technology was established in 1992 with the Ph.D programme. </p>
-<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-<div class="d-block services text-center">
-<div class="icon d-flex align-items-center justify-content-center">
-<img class="logosize" src="images/logo.png">
-</div>
-<div class="media-body p-4">
-<h3 class="heading">Basic & Engineering Sciences</h3>
-<p>
-
->Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right.</p>
-<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-</div>
-</div>
-</div>
-<!-- <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-<div class="d-block services text-center">
-<div class="icon d-flex align-items-center justify-content-center">
-<img class="logosize" src="images/logo.png">
-</div>
-<div class="media-body p-4">
-<h3 class="heading">Department of Biotechnology</h3>
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right.</p>
-<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-</div>
-</div>
-</div>
-</div>
- --></div>
 
 
-</section>
-<footer class="footer">
+
+
+
+
+
+<!-- 
+</section> -->
+ --><footer class="footer">
 <div class="container">
 <div class="row">
 <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
