--- a/vet.html
+++ b/vet.html
@@ -76,7 +76,7 @@
 <div class="col-md-6 col-lg-3 ftco-animate">
 <div class="staff">
 <div class="img-wrap d-flex align-items-stretch">
-<div class="img align-self-stretch" style="background-image: url(images/staff-1.jpg);"></div>
+<div class="img align-self-stretch" style="background-image: url(images/alumni/aditi.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Lloyd Wilson</h3>
@@ -136,7 +136,7 @@
 <div class="col-md-6 col-lg-3 ftco-animate">
 <div class="staff">
 <div class="img-wrap d-flex align-items-stretch">
-<div class="img align-self-stretch" style="background-image: url(images/staff-4.jpg);"></div>
+<div class="img align-self-stretch" style="background-image: url(images/alumni/aditi.jpg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Alicia Henderson</h3>
