--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <li class="nav-item"><a href="vet.html" class="nav-link">Meet Thapar Alumni</a></li>
 
 <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-<li class="nav-item"><a href="pricing.html" class="nav-link">FAQ's</a></li>
+<li class="nav-item"><a href="faq.html" class="nav-link">FAQ's</a></li>
 <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
 </ul>
 </div>
@@ -59,7 +59,9 @@
 </div>
 <div class="media-body">
 <h3 class="heading">Streams</h3>
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right.</p>
+<p style="font-weight: bold;">ENGINEERING STREAMS</p>
+<p >Explore Different Streams</p>
+<p><a href="#" class="btn btn-primary mr-md-4 py-3 px-4">Join Exploratory Sessions <span class="ion-ios-arrow-forward"></span></a></p>
 <a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 </div>
 </div>
@@ -71,7 +73,10 @@
 </div>
 <div class="media-body">
 <h3 class="heading">Thapar Alumni</h3>
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right.</p>
+<p style="font-weight: bold;">MEET OUR ALUMNI</p>
+<p >at prestigious places</p>
+<p><a href="#" class="btn btn-primary mr-md-4 py-3 px-4">Ted Talks by Thapar Alumni <span class="ion-ios-arrow-forward"></span></a></p>
+<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 <a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 </div>
 </div>
@@ -83,7 +88,10 @@
 </div>
 <div class="media-body">
 <h3 class="heading">FAQ's</h3>
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right.</p>
+<p style="font-weight: bold;">FREQUENTLY ASKED QUESTIONS</p>
+<p >Have any doubts regarding the courses?</p>
+<p><a href="#" class="btn btn-primary mr-md-4 py-3 px-4">Contact Help Desk<span class="ion-ios-arrow-forward"></span></a></p>
+<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 <a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
 </div>
 </div>
@@ -157,10 +165,10 @@
 <div class="text">
 <p class="mb-4">I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders.</p>
 <div class="d-flex align-items-center">
-<div class="user-img" style="background-image: url(images/cse.jpg)"></div>
+<div class="user-img" style="background-image: url(images/eced.jpg)"></div>
 <div class="pl-3">
-<p class="name">Dr. Maninder Singh</p>
-<span class="position">HOD,CSE</span>
+<p class="name">Dr. Alpana Agarwal</p>
+<span class="position">HOD,ECED</span>
 </div>
  </div>
 </div>
@@ -172,25 +180,10 @@
 <div class="text">
 <p class="mb-4">I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders.</p>
 <div class="d-flex align-items-center">
-<div class="user-img" style="background-image: url(images/eced.jpg)"></div>
+<div class="user-img" style="background-image: url(images/ele.png)"></div>
 <div class="pl-3">
-<p class="name">Roger Scott</p>
-<span class="position">Marketing Manager</span>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="item">
-<div class="testimony-wrap py-4">
-<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
-<div class="text">
-<p class="mb-4">I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders.</p>
-<div class="d-flex align-items-center">
-<div class="user-img" style="background-image: url(images/ele.jpg)"></div>
-<div class="pl-3">
-<p class="name">Roger Scott</p>
-<span class="position">Marketing Manager</span>
+<p class="name">Dr. R. S. Kaler</p>
+<span class="position">HOD,ELE</span>
 </div>
 </div>
 </div>
@@ -204,8 +197,8 @@
 <div class="d-flex align-items-center">
 <div class="user-img" style="background-image: url(images/cse.jpg)"></div>
 <div class="pl-3">
-<p class="name">Roger Scott</p>
-<span class="position">Marketing Manager</span>
+<p class="name">Dr. Maninder Singh</p>
+<span class="position">HOD,CSE</span>
 </div>
 </div>
 </div>
@@ -215,12 +208,27 @@
 <div class="testimony-wrap py-4">
 <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
 <div class="text">
-<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+<p class="mb-4">I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders.</p>
 <div class="d-flex align-items-center">
-<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
+<div class="user-img" style="background-image: url(images/cse.jpg)"></div>
 <div class="pl-3">
-<p class="name">Roger Scott</p>
-<span class="position">Marketing Manager</span>
+<p class="name">Dr. Maninder Singh</p>
+<span class="position">HOD,CSE</span>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="item">
+<div class="testimony-wrap py-4">
+<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
+<div class="text">
+<p class="mb-4">I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders.</p>
+<div class="d-flex align-items-center">
+<div class="user-img" style="background-image: url(images/cse.jpg)"></div>
+<div class="pl-3">
+<p class="name">Dr. Maninder Singh</p>
+<span class="position">HOD,CSE</span>
 </div>
 </div>
 </div>
