--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Pet Sitting - Free Bootstrap 4 Template by Colorlib</title>
+<title>TIET - Open Day</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
@@ -16,44 +16,23 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="wrap">
-<div class="container">
-<div class="row">
-<div class="col-md-6 d-flex align-items-center">
-<p class="mb-0 phone pl-md-2">
-<a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +00 1234 567</a>
-<a href="#"><span class="fa fa-paper-plane mr-1"></span> <span class="__cf_email__" data-cfemail="dfa6b0aaadbab2beb6b39fbab2beb6b3f1bcb0b2">[email&#160;protected]</span></a>
-</p>
-</div>
-<div class="col-md-6 d-flex justify-content-md-end">
-<div class="social-media">
-<p class="mb-0 d-flex">
-<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
-</p>
-</div>
-</div>
-</div>
-</div>
-</div>
+
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 <div class="container">
-<a class="navbar-brand" href="index.html"><span class="flaticon-pawprint-1 mr-2"></span>Pet sitting</a>
+</span><img src="images/logo.jpg"style="width:10%;">
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 <span class="fa fa-bars"></span> Menu
 </button>
 <div class="collapse navbar-collapse" id="ftco-nav">
 <ul class="navbar-nav ml-auto">
-<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-<li class="nav-item"><a href="vet.html" class="nav-link">Veterinarian</a></li>
-<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
+<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+<li class="nav-item"><a href="services.html" class="nav-link">Engineering Streams</a></li>
+
+<li class="nav-item"><a href="vet.html" class="nav-link">Meet Thapar Alumni</a></li>
+
 <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-<li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-<li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
-<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+<li class="nav-item"><a href="pricing.html" class="nav-link">FAQ's</a></li>
+<li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
 </ul>
 </div>
 </div>
