--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 </nav>
 
-<div class="hero-wrap js-fullheight" style="background-image: url('images/thapar2.jpg');padding-bottom: 100px;" data-stellar-background-ratio="0.5">
+<div class="hero-wrap js-fullheight" style="background-image: url('images/cos.png');padding-bottom: 100px;" data-stellar-background-ratio="0.5">
 <div class="overlay"></div>
 <div class="container">
 <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
