--- a/pricing.html
+++ b/pricing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Pet Sitting - Free Bootstrap 4 Template by Colorlib</title>
+<title>TIET - Open Day</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
@@ -25,13 +25,13 @@
 </button>
 <div class="collapse navbar-collapse" id="ftco-nav">
 <ul class="navbar-nav ml-auto">
-<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-<li class="nav-item"><a href="about.html" class="nav-link">Engineering Streams</a></li>
+<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+<li class="nav-item"><a href="services.html" class="nav-link">Engineering Streams</a></li>
 
 <li class="nav-item"><a href="vet.html" class="nav-link">Meet Thapar Alumni</a></li>
 
 <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-<li class="nav-item"><a href="pricing.html" class="nav-link">FAQ's</a></li>
+<li class="nav-item active"><a href="pricing.html" class="nav-link">FAQ's</a></li>
 <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
 </ul>
 </div>
