--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
 <span class="fa fa-map-marker"></span>
 </div>
 <div class="text">
-<p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+<p><span>Address:</span> Bhadson Rd, Adarsh Nagar, Prem Nagar, Patiala, Punjab 147004</p>
 </div>
 </div>
 </div>
@@ -76,7 +76,7 @@
 <span class="fa fa-phone"></span>
 </div>
 <div class="text">
-<p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+<p><span>Phone:</span> <a href="tel://1234567920">+91 082880 08121</a></p>
 </div>
 </div>
 </div>
@@ -96,7 +96,7 @@
 <span class="fa fa-globe"></span>
 </div>
 <div class="text">
-<p><span>Website</span> <a href="#">yoursite.com</a></p>
+<p><span>Website</span> <a href="http://www.thapar.edu/">www.thapar.edu/</a></p>
 </div>
 </div>
 </div>
