--- a/contact.html
+++ b/contact.html
@@ -236,7 +236,7 @@ Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/clou
 <script src="js/owl.carousel.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
 <script src="js/jquery.magnific-popup.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
 <script src="js/scrollax.min.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1-3egTtyfpXTt2PB6Zx5YB_ywlyyOGWo&callback=initMap" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
 <script src="js/google-map.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
 <script src="js/main.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
 
