--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="css/jquery.timepicker.css">
 <link rel="stylesheet" href="css/flaticon.css">
 <link rel="stylesheet" href="css/style.css">
+<link rel="icon" type="image/png" href="images/logo/logo.png"/>
 </head>
 <body>
 
@@ -133,7 +134,7 @@
 </div>
 <div class="col-md-12">
 <div class="form-group">
-<input type="submit" value="Send Message" class="btn btn-primary">
+<input type="submit" class="btn btn-primary">
 <div class="submitting"></div>
 </div>
 </div>
