--- a/index.html
+++ b/index.html
@@ -241,6 +241,92 @@
 </section>
 
 
+
+
+
+
+
+<!-- MAP START -->
+ <section id="dept" class="team-area p-relative pt-120 pb-120 fix">
+                <div class="section-t team-t paroller" data-paroller-factor="0.15" data-paroller-factor-lg="0.15" data-paroller-factor-md="0.15" data-paroller-factor-sm="0.15" data-paroller-type="foreground" data-paroller-direction="horizontal">
+                	<!-- <h2>TI Map</h2> -->
+                </div>
+                <div class="circal1 item-zoom-inout"></div>
+                <div class="circal2 item-zoom-inout"></div>
+                <div class="circal3 item-zoom-inout"></div>
+                <div class="circal4 item-zoom-inout"></div>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-6 col-lg-8">
+                            <div class="section-title text-center mb-80">
+                                <span class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".2s">Eagle Eye View</span>
+                                <h2 class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".4s">Thapar - Map</h2>
+                            </div>
+                        </div>
+                    </div>
+
+      <!-- start copy from here  -->
+    <!-- image map area starts  -->
+    <div class="container">
+      <img src="images/newmap.png" alt="map" usemap="#map" />
+      <map name="map">
+        <area
+          shape="poly"
+          coords="3898,2655,3888,2292,4276,2282,4271,2670"
+          alt="directorate"
+          href="test.html"
+        />
+        <area
+          target=""
+          alt="library"
+          title="library"
+          href=""
+          coords="3604,1814,3873,1824,3888,2113,3599,2103"
+          shape="poly"
+        />
+        <area
+          target=""
+          alt="csed"
+          title="csed"
+          href=""
+          coords="3913,1840,4236,1825,4211,2069,3918,2069"
+          shape="poly"
+        />
+        <area
+          target=""
+          alt="med"
+          title="med"
+          href=""
+          coords="4495,2150,4813,2130,4823,2408,4515,2408"
+          shape="poly"
+        />
+        <area
+          target=""
+          alt="girl hostel"
+          title="girl hostel"
+          href=""
+          coords="3335,1479,3719,1489,3719,1778,3325,1778"
+          shape="poly"
+        />
+        <area
+          target=""
+          alt="cos"
+          title="cos"
+          href=""
+          coords="2251,863,2559,844,2564,1137,2251,1097"
+          shape="poly"
+        />
+      </map>
+      <script>
+        imageMapResize();
+      </script>
+    </div>
+    <!-- image map area ends -->
+
+
+
+<!-- MAP END -->
+
 <section class="ftco-section bg-light">
 <div class="container">
 <div class="row justify-content-center pb-5 mb-3">
@@ -381,6 +467,8 @@ Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/clou
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
 <script src="js/google-map.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
 <script src="js/main.js" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
+ <script src="js/imageMapResizer.min.js"></script>
+
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13" type="7fcabe0204b65ee20594bff5-text/javascript"></script>
 <script type="7fcabe0204b65ee20594bff5-text/javascript">
