--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <li class="nav-item"><a href="vet.html" class="nav-link">Meet Thapar Alumni</a></li>
 
 <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-<li class="nav-item"><a href="faq.html" class="nav-link">FAQ's</a></li>
+<li class="nav-item"><a href="pricing.html" class="nav-link">FAQ's</a></li>
 <li class="nav-item"><a href="contact.html" class="nav-link">Help</a></li>
 </ul>
 </div>
@@ -53,46 +53,47 @@
 <div class="container">
 <div class="row">
 <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
-<div class="d-block services active text-center">
+<div class="d-block services  text-center">
 <div class="icon d-flex align-items-center justify-content-center">
-<span class="flaticon-blind"><img src=""style="width:10%"></span>
+<img src="images/es.png"style="width:130%;">
 </div>
 <div class="media-body">
 <h3 class="heading">Streams</h3>
 <p style="font-weight: bold;">ENGINEERING STREAMS</p>
 <p >Explore Different Streams</p>
 <p><a href="#" class="btn btn-primary mr-md-4 py-3 px-4">Join Exploratory Sessions <span class="ion-ios-arrow-forward"></span></a></p>
-<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+<a href="services.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+
 </div>
 </div>
 </div>
 <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
 <div class="d-block services text-center">
 <div class="icon d-flex align-items-center justify-content-center">
-<span class="flaticon-dog-eating"></span>
+<img src="images/alumni.png"style="width:110%;">
 </div>
 <div class="media-body">
 <h3 class="heading">Thapar Alumni</h3>
 <p style="font-weight: bold;">MEET OUR ALUMNI</p>
 <p >at prestigious places</p>
 <p><a href="#" class="btn btn-primary mr-md-4 py-3 px-4">Ted Talks by Thapar Alumni <span class="ion-ios-arrow-forward"></span></a></p>
-<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+<a href="vet.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+
 </div>
 </div>
 </div>
 <div class="col-md-4 d-flex align-self-stretch px-4 ftco-animate">
 <div class="d-block services text-center">
 <div class="icon d-flex align-items-center justify-content-center">
-<span class="flaticon-grooming"></span>
+<img src="images/faq.png"style="width:100%;">
 </div>
 <div class="media-body">
 <h3 class="heading">FAQ's</h3>
 <p style="font-weight: bold;">FREQUENTLY ASKED QUESTIONS</p>
 <p >Have any doubts regarding the courses?</p>
 <p><a href="#" class="btn btn-primary mr-md-4 py-3 px-4">Contact Help Desk<span class="ion-ios-arrow-forward"></span></a></p>
-<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
-<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+<a href="pricing.html" class="btn-custom d-flex align-items-center justify-content-center"><span class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
+
 </div>
 </div>
 </div>
@@ -245,7 +246,7 @@
 <div class="container">
 <div class="row justify-content-center pb-5 mb-3">
 <div class="col-md-7 heading-section text-center ftco-animate">
-<h2>Latest news from our blog</h2>
+<h2>Latest news </h2>
 </div>
 </div>
 <div class="row d-flex">
