--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <div class="circal3 item-zoom-inout"></div>
                 <div class="circal4 item-zoom-inout"></div>
                 <div class="container">
-                    <div class="row justify-content-center">
+                    <div class="row justify-content-center" style="padding-top:100px;padding-bottom:50px">
                         <div class="col-xl-6 col-lg-8">
                             <div class="section-title text-center mb-80">
                                 <span class="wow fadeInUp animated" data-animation="fadeInUp animated" data-delay=".2s">Eagle Eye View</span>
@@ -269,7 +269,7 @@
       <!-- start copy from here  -->
     <!-- image map area starts  -->
     <div class="container">
-      <img src="images/newmap.png" alt="map" usemap="#map" />
+      <img class="newmap" src="images/newmap.png" alt="map" usemap="#map" />
       <map name="map">
         <area
           shape="poly"
