--- a/eced.html
+++ b/eced.html
@@ -68,7 +68,7 @@
                 <div class="row"  style="padding-top: 50px;">
                     <div class="col-lg-5">
                         <div class="wow fadeInLeft" data-animation="fadeInLeft" data-delay=".2s">
-                            <img src="images/eced.jpg" alt="CSED">
+                            <img src="images/eced.jpg" alt="CSED" height="500" width="471" >
                         </div>
                     </div>
                     <div class="col-lg-7"  style="padding-left: 50px;">
@@ -83,19 +83,6 @@
                 </div>
             </div>
         </section>
-      
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
