--- a/index.html
+++ b/index.html
@@ -39,17 +39,15 @@
 </div>
 </nav>
 
-<div class="hero-wrap js-fullheight" style="background-image: url('images/cos.png');padding-bottom: 100px;" data-stellar-background-ratio="0.5">
+<!--<div class="hero-wrap js-fullheight" style="background-image: url('images/cos.png');padding-bottom: 100px;" data-stellar-background-ratio="0.5">
 <div class="overlay"></div>
 <div class="container">
-<div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
+<div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">-->
 <div class="col-md-11 ftco-animate text-center">
-<h1 class="mb-4"><img src="images/tu.png"style="width:50%;margin-left: 0px;padding-left: 0px;"> </h1>
+<h1 class="mb-4"><img src="images/tu.png"style="width:30%;margin-left: 0px;padding-left: 0px;"> </h1>
 <!--<p><a href="#" class="btn btn-primary mr-md-4 py-3 px-4">Learn more <span class="ion-ios-arrow-forward"></span></a></p>-->
  </div>
-</div>
-</div>
-</div>
+
 <section class="ftco-section bg-light ftco-no-pt ftco-intro">
 <div class="container">
 <div class="row">
@@ -165,7 +163,7 @@
 <div class="testimony-wrap py-4">
 <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
 <div class="text">
-<p class="mb-4">I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders.</p>
+<p class="mb-4">Our aim is to educate the brilliant youth towards world-class education and to enable them to contribute to the development of our society. </p>
 <div class="d-flex align-items-center">
 <div class="user-img" style="background-image: url(images/eced.jpg)"></div>
 <div class="pl-3">
@@ -180,7 +178,7 @@
 <div class="testimony-wrap py-4">
 <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
 <div class="text">
-<p class="mb-4">I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders.</p>
+<p class="mb-4">Our vision is to be a leading establishment excelling in higher education and research in the field of Electrical and Instrumentation Engineering to meet the aspirations of global community. </p>
 <div class="d-flex align-items-center">
 <div class="user-img" style="background-image: url(images/ele.png)"></div>
 <div class="pl-3">
@@ -329,59 +327,7 @@
 
 <!-- MAP END -->
 
-<section class="ftco-section bg-light">
-<div class="container">
-<div class="row justify-content-center pb-5 mb-3">
-<div class="col-md-7 heading-section text-center ftco-animate">
-<h2>Latest news </h2>
-</div>
-</div>
-<div class="row d-flex">
-<div class="col-md-4 d-flex ftco-animate">
-<div class="blog-entry align-self-stretch">
-<a href="blog-single.html" class="block-20 rounded" style="background-image: url('images/image_1.jpg');">
-</a>
-<div class="text p-4">
-<div class="meta mb-2">
-<div><a href="#">April 07, 2020</a></div>
-<div><a href="#">Admin</a></div>
-<div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-</div>
-<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex ftco-animate">
-<div class="blog-entry align-self-stretch">
-<a href="blog-single.html" class="block-20 rounded" style="background-image: url('images/image_2.jpg');">
-</a>
-<div class="text p-4">
-<div class="meta mb-2">
-<div><a href="#">April 07, 2020</a></div>
-<div><a href="#">Admin</a></div>
-<div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-</div>
-<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-</div>
-</div>
-</div>
-<div class="col-md-4 d-flex ftco-animate">
-<div class="blog-entry align-self-stretch">
-<a href="blog-single.html" class="block-20 rounded" style="background-image: url('images/image_3.jpg');">
-</a>
-<div class="text p-4">
-<div class="meta mb-2">
-<div><a href="#">April 07, 2020</a></div>
-<div><a href="#">Admin</a></div>
-<div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-</div>
-<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
+
 
 <footer class="footer">
 <div class="container">
