--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 <li class="nav-item"><a href="services.html" class="nav-link">Engineering Streams</a></li>
 
-<li class="nav-item"><a href="vet.html" class="nav-link">Meet Thapar Alumni</a></li>
+<li class="nav-item"><a href="alumni.html" class="nav-link">Meet Thapar Alumni</a></li>
 
 <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 <li class="nav-item"><a href="pricing.html" class="nav-link">FAQ's</a></li>
